fix: change alignment for register buttons

--- a/src/app/components/register/register.component.scss
+++ b/src/app/components/register/register.component.scss
@@ -16,6 +16,7 @@
 
 .card-title{
     font-size: 2rem;
+    text-align: center;
 }
 // .wrapper {
 //     position: relative;
@@ -28,4 +29,12 @@
 
  .card-text{
     font-size: 1.5rem;
+ }
+
+ .secundary-text{
+   color: #8d8d8d;
+ }
+
+ .login-button{
+  text-decoration: none;
  }
